--- a/template.html
+++ b/template.html
@@ -129,12 +129,8 @@ $if(subtitle)$
 $endif$
 $-----------------------------------------------------------------------> author
 $for(author)$
-<p class="author">$author$</p>
+<p class="author"><a href="$homepage$">$author$</a></p>
 $endfor$
-$-------------------------------------------------------------------------> date
-$if(date)$
-<p class="date">$date$</p>
-$endif$
 $----------------------------------------------------------------------> summary
 $if(summary)$
 <div class="summary">
