--- a/template.html
+++ b/template.html
@@ -129,7 +129,7 @@ $if(subtitle)$
 $endif$
 $-----------------------------------------------------------------------> author
 $for(author)$
-<p class="author"><a href="$homepage$">$author$</a></p>
+<p class="author"><a href="https://tdhopper.com">By $author$ — tdhopper.com</a></p>
 $endfor$
 $----------------------------------------------------------------------> summary
 $if(summary)$
