--- a/template.html
+++ b/template.html
@@ -73,6 +73,11 @@ $------------------------------------------------------------------> description
 $if(description)$
   <meta name="description" content="$description$">
 $endif$
+$if(image)$
+  <meta property="og:image" content="$image$">
+  <meta name="twitter:image" content="$image$">
+$endif$
+
 $------------------------------------------------------------------------> title
   <title>$if(title-prefix)$$title-prefix$ – $endif$$pagetitle$</title>
 $--===========================================================================
